<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lundwall.beerallover.BeerAllOverMain$PlaceholderFragment">

    <Button
        android:id="@+id/returKnap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:background="@drawable/knaptextstyle"
        android:paddingLeft="@dimen/Knappadding"
        android:paddingRight="@dimen/Knappadding"
        android:text="@string/Back"
        android:textAllCaps="false"
        android:textColor="@color/colorMorkTekst"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/Overskrift"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="71dp"
        android:text="@string/about_start"
        android:textColor="@color/colorListeTekst"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toEndOf="@+id/Indhold"
        app:layout_constraintStart_toStartOf="@+id/Indhold"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/Indhold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="false"
        android:elegantTextHeight="true"
        android:text="@string/about_text"
        android:textColor="#386297"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toEndOf="@+id/returKnap"
        app:layout_constraintStart_toStartOf="@+id/Hilsen"
        app:layout_constraintTop_toBottomOf="@+id/Overskrift" />


    <TextView
        android:id="@+id/Hilsen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="23dp"
        android:text="Made for for your refreshment by\nMikael Bjerrum &amp; Mads Lundwall"
        android:textIsSelectable="false"
        android:textSize="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/returKnap" />

    <TextView
        android:id="@+id/xtitel"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:text="   Beer all Over"
        android:textColor="@android:color/white"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toTopOf="@+id/Overskrift"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>